modified cheesecake.html file and made image folder

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/cheesecake.html">Cheesecake</a>
+        
+        <!--finish the cheesecake webpage and the rest of the project-->
+
     </body>
 </html>
