--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -3,9 +3,25 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <title>Cheesecake Recipe</title>
     </head>
     <body>
-        <h1>Cheesecake</h1>
+        <h1>Cheesecake (Kinder Bueno)</h1>
+
+        <img src="../images/cheesecake.jpg" width="500px">
+
+        <h4>The number one cheesecake of all time! (Unofficially confirmed by me!)</h4>
+        
+        <h4>Ingredients</h4>
+        <div>
+            <ul>
+                <li>400g cream cheese</li>
+                <li>300ml double cream</li>
+                <li>400g standard digestives</li>
+                <li>50g unsalted butter</li>
+                <li>5 Tbsp sweetener</li>
+                <li> 200g kinder bueno chocolate</li>
+            </ul>
+        </div>
     </body>
 </html>
