modified and finished cheescake.html

--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -13,6 +13,7 @@
         <h4>The number one cheesecake of all time! (Unofficially confirmed by me!)</h4>
         
         <h4>Ingredients</h4>
+
         <div>
             <ul>
                 <li>400g cream cheese</li>
@@ -23,5 +24,24 @@
                 <li> 200g kinder bueno chocolate</li>
             </ul>
         </div>
+
+        <h4>Steps</h4>
+
+        <div>
+            <ol>
+                <li>Place cream cheese and sweetener into one big bowl and mix.</li>
+                <li>In another bowl, add double cream and whisk till stiff peaks.</li>
+                <li>Add chocolate into another bowl and put in the microwave for 3 minutes on max heat.</li>
+                <li>Repeat 'step 3' with butter, but microwave for only 30 seconds.</li>
+                <li>Mix all ingredients into one bowl except for digestives and butter.</li>
+                <li>Crush digestives into a fine powder and mix with butter in separate bowl.</li>
+                <li>Grab a cheesecake tin, place digestive mix on bottom and flatten.</li>
+                <li>Once all flattened, add cheesecake mix on top then chill in fridge.</li>
+            </ol>
+        </div>
+
+        <a href="#">Return to top</a>
+        <p></p>
+        <a href="../index.html">Previous page</a>
     </body>
 </html>
