--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/cheesecake.html">Cheesecake</a>
+        <ul>
+            <li><a href="recipes/cheesecake.html">Cheesecake</a></li>
+            <li><a href="recipes/strawberry-meringue.html">Strawberry Meringue</a></li>
+            <li><a href="recipes/fluffy-pancakes.html">Fluffy Pancakes</a></li>
+        </ul>
         
-        <!--finish the cheesecake webpage and the rest of the project-->
-
     </body>
 </html>
