Modified and added content to fluffy-pancakes.html

--- a/recipes/fluffy-pancakes.html
+++ b/recipes/fluffy-pancakes.html
@@ -16,12 +16,12 @@
 
         <div>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>2 eggs</li>
+                <li>2 Tbsp milk</li>
+                <li>o.25 Tsp vanilla extract</li>
+                <li>0.25 cup flour</li>
+                <li>0.5 Tsp baking powder</li>
+                <li>2.5 Tbsp sugar</li>
             </ul>
         </div>
 
@@ -29,14 +29,13 @@
 
         <div>
             <ol>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Separate egg yolk and egg whites.</li>
+                <li>Whisk egg whites until stiff peaks.</li>
+                <li>Add all other ingredients excluding egg whites, into a bowl and mix.</li>
+                <li>Add egg whites to rest of ingredients and fold slowly.</li>
+                <li>On the lowest heat, heat up a pan and add dollops of pancake mix.</li>
+                <li>Place a few drops of water into the pan and place lid on top of pan.</li>
+                <li>Once jiggly, flip it and repeat steps 5-7.</li>
             </ol>
         </div>
 
