Modified content of lists in strawberry-meringue.html

--- a/recipes/strawberry-meringue.html
+++ b/recipes/strawberry-meringue.html
@@ -16,12 +16,9 @@
 
         <div>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>5 eggs</li>
+                <li>225g caster sugar</li>
+                <li>0.5 tsp vanilla and strawberry extract</li>
             </ul>
         </div>
 
@@ -29,14 +26,11 @@
 
         <div>
             <ol>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Preheat oven to 140 degrees celsius, then separate yolk and egg whites.</li>
+                <li>In a big bowl, whisk egg whites and add sugar periodically until stiff peaks.</li>
+                <li>Once stiff peaks, add in the vanilla extract and whisk.</li>
+                <li>Line a baking tray with baking paper and place well spaced out dollops of meringue.</li>
+                <li>Put in oven for 1hr45min, then once done place meringue on cold rack to cool.</li>
             </ol>
         </div>
 
