--- a/recipes/fluffy-pancakes.html
+++ b/recipes/fluffy-pancakes.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Fluffy Pancakes</h1>
 
-        <img src="" width="500px">
+        <img src="../images/fluffy-pancakes.jpg" width="500px">
 
         <h4>The only food that will make you believe you're biting into a cloud!</h4>
         
