--- a/recipes/strawberry-meringue.html
+++ b/recipes/strawberry-meringue.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Strawberry Meringue</h1>
 
-        <img src="" width="500px">
+        <img src="../images/strawberry-meringue.jpg" width="500px">
 
         <h4>The sweetest treat which compliments every dessert!</h4>
         
