--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <title>Odin Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>The Worlds Top 3 Desserts!</h1>
+        <img src="images/desserts-collage.jpg" width="500px">
         <ul>
             <li><a href="recipes/cheesecake.html">Cheesecake</a></li>
             <li><a href="recipes/strawberry-meringue.html">Strawberry Meringue</a></li>
